✅ YoungGC之前触发FullGC的测试用例